Adding posts, small updates

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,7 @@
       archivePrefix={arXiv},
       primaryClass={cs.RO},
       url={https://arxiv.org/abs/2506.01182}, 
+      selected={true}
 }
 
 @misc{ali2025graphpadinferencetime3dscene,
@@ -16,6 +17,7 @@
       archivePrefix={arXiv},
       primaryClass={cs.AI},
       url={https://arxiv.org/abs/2506.01174}, 
+      selected={true}
 }
 
 
