Changing posts file name

--- a/_posts/2025-02-28-llmquiz.md
+++ b/_posts/2025-02-28-llmquiz.md
@@ -3,7 +3,7 @@ layout: post
 title: The LLM Quiz: 25 Questions to Test Your Understanding of LLMs
 date: 2025-02-28 14:00:00
 description: A short quiz-style slideshow to challenge how well you really know large language models
-tags: LLMs AI quiz
+tags: LLM
 categories: research-posts
 ---
 
